# radar_frontend_test

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: api.py  db.py  db_models.py  generate_products.py  get_cats.py  jwt_token.py  main.py  schemas.py  settings.py
nginx/: nginx.conf.template
